# PCDL

./: .gitignore
ExtendedOperator/: CMakeLists.txt  ContextBatchPool.cc  ContextBatchPoolGrad.cc  ContextBlockPool.cc  ContextBlockPoolGrad.cc  GlobalIndicesPool.cc  GlobalIndicesPoolGrad.cc  IndicesPool.cc  IndicesPoolGrad.cc  build.sh  context_batch_pool_grad.py  context_block_pool_grad.py  global_indices_pool_grad.py  indices_pool_grad.py  pool_grad.py  test.py  test_context_batch_pool.py  test_context_block_pool.py  test_global_indices_pool.py  test_indices_pool.py
MeshSampleWrapper/: CMakeLists.txt  batch_file_io.cpp  batch_file_io.h  mesh_sample.cpp  mesh_sample.h  preprocess.cpp  preprocess.h  python_wrapper.cpp  setup.py  test.cpp  test_buffer_cpp.txt  test_python.py
VanillaPointNet/: activation.py  cls_activation_constrain.py  cls_network.py  cls_provider.py  cls_provider_v2.py  cls_train.py  draw_util.py  local_feature.py  main.py  network.py  network_class.py  network_interact.py  preprocess.py  provider.py  seg_network.py  seg_predict.py  seg_provider.py  seg_test.py  tf_utils.py
VanillaPointNet/modelnet40_util/: util.py
VanillaPointNet/s3dis_util/: util.py
pc_seg/: autoencoder_network.py  autoencoder_network_test.py  classify_network.py  folding_train.py  graph_conv_layer.py  modelnet_label_train.py  modelnet_label_voxel_train.py  modelnet_voxel_experiment.py  modelnet_voxel_train.py  point_evaluate.py  point_network.py  point_train.py  provider.py  s3dis_eval.py  s3dis_label_graph_conv_train.py  s3dis_label_train.py  s3dis_label_voxel_train.py  s3dis_voxel_train.py  test.py  train.py  train_util.py  voxel_train.py
pc_seg/modelnet/: data_util.py
pc_seg/network/: point_network.py
pc_seg/operator/: Makefile  compute_covar.cu  compute_dists.cu  down_sample.cpp  down_sample.cu  points2voxel.cu  points_util_py.cpp  sample_block.cpp  sample_block.cu  setup.py  test_compute_dists.cpp  test_point2voxel.cpp
pc_seg/operator/test/: test_point_util.py
pc_seg/s3dis/: block_util.py  data_util.py  draw_util.py  point_util.py  sample_util.py  voxel_util.py
pc_seg/shapenet/: folding_util.py
pc_seg/tf_ops/: BuildTFOps.sh  TFNeighborKernel.cu
